# nn

./: .gitignore  Cargo.toml  README.md
src/: main.rs  neural.rs  read_byte.rs
