[package]
name = "cnn"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray-rand = "0.16.0"
polars = { version = "0.52.0", default-features = false, features = [ "fmt", "dtype-u8", "lazy" ,"ndarray","dtype-array","dtype-struct","list_arithmetic"] }
ndarray = { version = "0.17.1" }
polars-arrow = "0.52.0"
